--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "[178 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "56916892",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "178"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "df0ef103",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "14"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "47989426",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "2f630462",
    "metadata": {},
    "outputs": [
@@ -480,12 +480,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9fb8876e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.shape[1] - 1\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "785ba2ef",
+   "id": "707198b8",
    "metadata": {},
    "source": [
-    "# Your answer here\n",
-    "\n",
     "We have thirteen predictor variables excluding class. "
    ]
   },
@@ -510,7 +529,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "id": "7b1bd308",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of      alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
+       "0      14.23        1.71  2.43               15.6      127.0           2.80   \n",
+       "1      13.20        1.78  2.14               11.2      100.0           2.65   \n",
+       "2      13.16        2.36  2.67               18.6      101.0           2.80   \n",
+       "3      14.37        1.95  2.50               16.8      113.0           3.85   \n",
+       "4      13.24        2.59  2.87               21.0      118.0           2.80   \n",
+       "..       ...         ...   ...                ...        ...            ...   \n",
+       "173    13.71        5.65  2.45               20.5       95.0           1.68   \n",
+       "174    13.40        3.91  2.48               23.0      102.0           1.80   \n",
+       "175    13.27        4.28  2.26               20.0      120.0           1.59   \n",
+       "176    13.17        2.59  2.37               20.0      120.0           1.65   \n",
+       "177    14.13        4.10  2.74               24.5       96.0           2.05   \n",
+       "\n",
+       "     flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
+       "0          3.06                  0.28             2.29             5.64  1.04   \n",
+       "1          2.76                  0.26             1.28             4.38  1.05   \n",
+       "2          3.24                  0.30             2.81             5.68  1.03   \n",
+       "3          3.49                  0.24             2.18             7.80  0.86   \n",
+       "4          2.69                  0.39             1.82             4.32  1.04   \n",
+       "..          ...                   ...              ...              ...   ...   \n",
+       "173        0.61                  0.52             1.06             7.70  0.64   \n",
+       "174        0.75                  0.43             1.41             7.30  0.70   \n",
+       "175        0.69                  0.43             1.35            10.20  0.59   \n",
+       "176        0.68                  0.53             1.46             9.30  0.60   \n",
+       "177        0.76                  0.56             1.35             9.20  0.61   \n",
+       "\n",
+       "     od280/od315_of_diluted_wines  proline  class  \n",
+       "0                            3.92   1065.0      0  \n",
+       "1                            3.40   1050.0      0  \n",
+       "2                            3.17   1185.0      0  \n",
+       "3                            3.45   1480.0      0  \n",
+       "4                            2.93    735.0      0  \n",
+       "..                            ...      ...    ...  \n",
+       "173                          1.74    740.0      2  \n",
+       "174                          1.56    750.0      2  \n",
+       "175                          1.56    835.0      2  \n",
+       "176                          1.62    840.0      2  \n",
+       "177                          1.60    560.0      2  \n",
+       "\n",
+       "[178 rows x 14 columns]>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "cc899b59",
    "metadata": {},
    "outputs": [
@@ -584,7 +663,7 @@
    "id": "fdee5a15",
    "metadata": {},
    "source": [
-    "We did not elect to standardize our response variable Class because it is not necessary; as a target variable, it is not used in the distance-based calculations. "
+    "We did not elect to standardize our response variable Class because it is not necessary; as a target variable, it is not used in the distance-based calculations and it is a categorical variable that has been encoded."
    ]
   },
   {
@@ -617,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "72c101f2",
    "metadata": {},
    "outputs": [],
@@ -650,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "85e8f6af",
    "metadata": {},
    "outputs": [
@@ -707,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "08818c64",
    "metadata": {},
    "outputs": [
@@ -725,7 +804,7 @@
     "\n",
     "# Define the parameter grid \n",
     "parameter_grid = {\n",
-    "    \"n_neighbors\": range(1,50,3)\n",
+    "    \"n_neighbors\": range(1,51)\n",
     "}\n",
     "\n",
     "# Implement a grid search \n",
@@ -763,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
