--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "efd6dc0c",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
    "id": "35308e2c",
    "metadata": {},
    "source": [
-    "There is a positive correlation between petal length & sepal length, petal width & sepal length and petal length & petal width. There is a negative correlation between petal length & sepal width and petal width & sepal width. "
+    "There is a positive correlation between petal length & sepal length, petal width & sepal length and petal length & petal width. There is a negative correlation between petal length & sepal width and petal width & sepal width. Based on the clustering results, based on the width & lengths of the sepal and petals, there appeears to be 3 different clusters or species of flowers. "
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b2cfec72",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "35c71421",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "be4c4011",
    "metadata": {},
    "outputs": [
@@ -341,19 +341,19 @@
      "output_type": "stream",
      "text": [
       "Mean of Petal Width: replicate\n",
-      "0       0.059673\n",
-      "1       0.073714\n",
-      "2      -0.132510\n",
-      "3      -0.051775\n",
-      "4      -0.053530\n",
+      "0       1.244667\n",
+      "1       1.255333\n",
+      "2       1.098667\n",
+      "3       1.160000\n",
+      "4       1.158667\n",
       "          ...   \n",
-      "9995   -0.014041\n",
-      "9996   -0.066694\n",
-      "9997   -0.064939\n",
-      "9998   -0.057918\n",
-      "9999    0.067571\n",
+      "9995    1.188667\n",
+      "9996    1.148667\n",
+      "9997    1.150000\n",
+      "9998    1.155333\n",
+      "9999    1.250667\n",
       "Name: petal width (cm), Length: 10000, dtype: float64\n",
-      "90% Confidence Interval of Mean Petal Width: (-0.13343115747560247, 0.13514237587137462)\n"
+      "90% Confidence Interval of Mean Petal Width: (1.0979666666666665, 1.302)\n"
      ]
     }
    ],
@@ -364,7 +364,7 @@
     "\n",
     "bootstrap_samples = [] \n",
     "for i in range(10_000): \n",
-    "\tsample = scaled_iris_df.sample(frac = 1, replace = True)\n",
+    "\tsample = iris_df.sample(frac = 1, replace = True)\n",
     "\tsample = sample.assign(replicate = i) \n",
     "\tbootstrap_samples.append(sample)\n",
     "\n",
